--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: web-config
-#  namespace: assesment
+#  namespace: trial
 data:
   APP_MESSAGE: {{ .Values.appMessage | quote }}
